# mysql-json-table

./: mysql-json-table.cabal  readme.md
.github/workflows/: build.yml  test.yml
script/: build  test
src/Database/MySQL/: JSONTable.hs
test/: Main.hs
