name: mysql-json-table
category: Database
synopsis: Using mysql to store id-to-json tables.
version: 0.1.0.0
author: Daniel Casanueva (daniel.casanueva `at` proton.me)
maintainer: Daniel Casanueva (daniel.casanueva `at` proton.me)
license: MIT
license-file: license
extra-source-files: readme.md
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options: -Wall -Wunused-packages
  build-depends: base, containers, mysql-simple
  exposed-modules: Database.MySQL.JSONTable
