name: mysql-json-table
category: Database
synopsis: Using mysql to store id-to-json tables.
version: 0.1.0.0
author: Daniel Casanueva (daniel.casanueva `at` proton.me)
maintainer: Daniel Casanueva (daniel.casanueva `at` proton.me)
license: MIT
license-file: license
extra-source-files: readme.md
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  default-extensions:
      ImportQualifiedPost, OverloadedStrings
    , GeneralizedNewtypeDeriving, TypeApplications
    , ScopedTypeVariables
  ghc-options: -Wall -Wunused-packages
  build-depends:
      base, mysql, mysql-simple, aeson, bytestring
    , conduit
  exposed-modules: Database.MySQL.JSONTable

executable mysql-json-table-test
  hs-source-dirs: test
  default-language: Haskell2010
  default-extensions: ImportQualifiedPost, OverloadedStrings
  ghc-options: -Wall -Wunused-packages
  build-depends: base, mysql-simple, mysql-json-table, conduit
  main-is: Main.hs
